--- a/src/products/styles.css
+++ b/src/products/styles.css
@@ -1,3 +1,5 @@
+/* FILTER STYLES */
+
 .options {
   max-height: 12rem;
   overflow: scroll;
@@ -85,70 +87,8 @@
   width: 18px;
   height: 18px;
 }
-.products-topbar {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 2px solid #ddd;
-  border-top: 2px solid #ddd;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  margin-top: 1rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
 
-.filter-button {
-  margin-right: 2rem;
-}
-.main-container {
-  display: flex;
-  width: 100%;
-}
-
-.filters-container {
-  display: none;
-  width: 20%;
-}
-
-.filters-visible {
-  display: block;
-}
-.grid-container {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.grid-with-filters {
-  width: 80%;
-}
-
-.products-container {
-  padding: 2rem;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
-.status-message {
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 20px 0;
-  width: 100%;
-  height: 100vh;
-}
-
-.status-message.loading {
-  color: #007bff;
-}
-
-.status-message.error {
-  color: #dc3545;
-}
-
-.status-message.empty {
-  color: #6c757d;
-}
+/* PRODUCT CARD STYLES */
 
 .product-card {
   border: 1px solid #ddd;
@@ -228,6 +168,111 @@
   border-radius: 4px;
   font-size: 0.8rem;
 }
+
+/* PRODUCTS LAYOUT STYLES */
+
+.main-container {
+  display: flex;
+  width: 100%;
+}
+
+.filters-container {
+  display: none;
+  width: 20%;
+}
+
+.filters-visible {
+  display: block;
+}
+.grid-container {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.grid-with-filters {
+  width: 80%;
+}
+
+.products-container {
+  padding: 2rem;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.status-message {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 20px 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.status-message.loading {
+  color: #007bff;
+}
+
+.status-message.error {
+  color: #dc3545;
+}
+
+.status-message.empty {
+  color: #6c757d;
+}
+
+/* HEADER STYLES */
+
+.products-topbar {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px solid #ddd;
+  border-top: 2px solid #ddd;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  margin-top: 1rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.filter-button {
+  margin-right: 2rem;
+}
+
+/* PAGINATION STYLES */
+
+.pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.pagination li {
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.pagination li a {
+  padding: 8px 12px;
+  border: 1px solid #ddd;
+  color: black;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.pagination li.active a {
+  background-color: #ccc;
+  color: white;
+  border-color: #ccc;
+}
+
+.pagination li a:hover {
+  background-color: #f0f0f0;
+}
+
+/* RESPONSIVE STYLES */
 
 @media (max-width: 768px) {
   .product-title {
